[package]
authors = ["Storyscript Team <team@storyscript.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "shipyard_app"
version = "0.1.0"
readme = "README.md"

[dependencies]
shipyard = {version = "*", path = "../shipyard"}
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = {version = "0.2", features = ["chrono", "env-filter", "fmt"]}
