[package]
authors = ["Story.ai Team <team@story.ai>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "shipyard_app"
version = "0.1.0"
readme = "README.md"

[dependencies]
shipyard = {version = "*", path = "../shipyard"}
tracing = {git = "https://github.com/tokio-rs/tracing", features = ["attributes", "std"], default-features = false}


[dev-dependencies]
tracing-subscriber = {git = "https://github.com/tokio-rs/tracing", features = ["chrono", "env-filter", "fmt"]}
