[package]
authors = ["Story.ai Team <team@story.ai>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "shipyard_app"
readme = "README.md"
version = "0.1.0"

[dependencies]
shipyard = {version = "*", path = "../shipyard", features = ["proc"]}
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = {version = "0.2", features = ["chrono", "env-filter", "fmt"], default-features = false}
